--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
 
   "name": "Breezy.hr Blind",
   "description": "Toggle visibility of scorecards and comments of Breezy.hr to help combat group bias during hiring.",
-  "version": "1.0.2",
+  "version": "1.0.3",
 
   "icons": {
     "16": "assets/icon16.png",
@@ -27,7 +27,7 @@
     {
       "matches": ["*://breezy.hr/*"],
       "css": ["contentStyle.css"],
-      "js": ["libs/jquery.min.js", "contentScript.js"]
+      "js": ["libs/jquery.min.js", "libs/md5.js", "contentScript.js"]
     }
   ],
 
